// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AudioButton Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <button
    className="sc-bdvvtL fZQeXN"
    onClick={[Function]}
  />
  <audio
    autoPlay={false}
    src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-13.mp3"
  />
</div>
`;

exports[`Storyshots AudioButton Playing 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <button
    className="sc-bdvvtL fZQeXN"
    onClick={[Function]}
  />
  <audio
    autoPlay={false}
    src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-13.mp3"
  />
</div>
`;

exports[`Storyshots Button Default 1`] = `
<button
  className="sc-dkPtRN doeNQV"
  data-large={false}
  onClick={[Function]}
>
  按鈕
</button>
`;

exports[`Storyshots Button Primary 1`] = `
<button
  className="sc-dkPtRN doeNQV"
  data-large={false}
  onClick={[Function]}
>
  按鈕
</button>
`;

exports[`Storyshots Button Primary Outline 1`] = `
<button
  className="sc-dkPtRN erzFDq"
  data-large={false}
  onClick={[Function]}
>
  按鈕
</button>
`;

exports[`Storyshots Button Secondary 1`] = `
<button
  className="sc-dkPtRN bvmbqx"
  data-large={false}
  onClick={[Function]}
>
  按鈕
</button>
`;

exports[`Storyshots Button Secondary Outline 1`] = `
<button
  className="sc-dkPtRN fPUQHW"
  data-large={false}
  onClick={[Function]}
>
  按鈕
</button>
`;

exports[`Storyshots CountPanel Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    className="sc-iCfMLu ebQvCh"
  >
    <div
      className="sc-eCImPb kitwYs"
    >
      <p
        className="sc-jRQBWg dTZyFv"
      >
        0
      </p>
      <p
        className="sc-gKclnd kAkzlB"
      >
        TODAY
      </p>
    </div>
    <div
      className="sc-eCImPb kitwYs"
    >
      <p
        className="sc-jRQBWg dTZyFv"
      >
        0
      </p>
      <p
        className="sc-gKclnd kAkzlB"
      >
        2/13 - 2/19
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots CountPanelItem Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    className="sc-eCImPb kitwYs"
  >
    <p
      className="sc-jRQBWg dTZyFv"
    >
      0
    </p>
    <p
      className="sc-gKclnd kAkzlB"
    >
      TODAY
    </p>
  </div>
</div>
`;

exports[`Storyshots DateCountItem Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
>
  <div
    className="sc-iqseJM jlfgHR"
  >
    <div
      className="sc-pVTFL gwDOnY"
    >
      <p
        className="sc-jrQzAO bzluKI"
      >
        5
      </p>
      <div
        className="sc-furwcr iZQuQD"
      />
      <div
        className="sc-furwcr iZQuQD"
      />
      <div
        className="sc-furwcr iZQuQD"
      />
      <div
        className="sc-furwcr iZQuQD"
      />
      <div
        className="sc-furwcr iZQuQD"
      />
    </div>
    <div
      className="sc-kDTinF"
    >
      <p
        className="sc-gKclnd kAkzlB"
      >
        2/14
      </p>
      <p
        className="sc-gKclnd kAkzlB"
      >
        MON
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots DateCountItem No Tomato 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
>
  <div
    className="sc-iqseJM jlfgHR"
  >
    <div
      className="sc-pVTFL gwDOnY"
    />
    <div
      className="sc-kDTinF"
    >
      <p
        className="sc-gKclnd kAkzlB"
      >
        2/14
      </p>
      <p
        className="sc-gKclnd kAkzlB"
      >
        MON
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots DateCountPanel Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    className="sc-crHmcD iaIScP"
  >
    <div
      className="sc-iqseJM jlfgHR"
    >
      <div
        className="sc-pVTFL gwDOnY"
      />
      <div
        className="sc-kDTinF"
      >
        <p
          className="sc-gKclnd kAkzlB"
        >
          2/13
        </p>
        <p
          className="sc-gKclnd kAkzlB"
        >
          SUN
        </p>
      </div>
    </div>
    <div
      className="sc-iqseJM jlfgHR"
    >
      <div
        className="sc-pVTFL gwDOnY"
      >
        <p
          className="sc-jrQzAO bzluKI"
        >
          1
        </p>
        <div
          className="sc-furwcr iZQuQD"
        />
      </div>
      <div
        className="sc-kDTinF"
      >
        <p
          className="sc-gKclnd kAkzlB"
        >
          2/14
        </p>
        <p
          className="sc-gKclnd kAkzlB"
        >
          MON
        </p>
      </div>
    </div>
    <div
      className="sc-iqseJM jlfgHR"
    >
      <div
        className="sc-pVTFL gwDOnY"
      >
        <p
          className="sc-jrQzAO bzluKI"
        >
          2
        </p>
        <div
          className="sc-furwcr iZQuQD"
        />
        <div
          className="sc-furwcr iZQuQD"
        />
      </div>
      <div
        className="sc-kDTinF"
      >
        <p
          className="sc-gKclnd kAkzlB"
        >
          2/15
        </p>
        <p
          className="sc-gKclnd kAkzlB"
        >
          TUE
        </p>
      </div>
    </div>
    <div
      className="sc-iqseJM jlfgHR"
    >
      <div
        className="sc-pVTFL gwDOnY"
      >
        <p
          className="sc-jrQzAO bzluKI"
        >
          3
        </p>
        <div
          className="sc-furwcr iZQuQD"
        />
        <div
          className="sc-furwcr iZQuQD"
        />
        <div
          className="sc-furwcr iZQuQD"
        />
      </div>
      <div
        className="sc-kDTinF"
      >
        <p
          className="sc-gKclnd kAkzlB"
        >
          2/16
        </p>
        <p
          className="sc-gKclnd kAkzlB"
        >
          WED
        </p>
      </div>
    </div>
    <div
      className="sc-iqseJM jlfgHR"
    >
      <div
        className="sc-pVTFL gwDOnY"
      >
        <p
          className="sc-jrQzAO bzluKI"
        >
          4
        </p>
        <div
          className="sc-furwcr iZQuQD"
        />
        <div
          className="sc-furwcr iZQuQD"
        />
        <div
          className="sc-furwcr iZQuQD"
        />
        <div
          className="sc-furwcr iZQuQD"
        />
      </div>
      <div
        className="sc-kDTinF"
      >
        <p
          className="sc-gKclnd kAkzlB"
        >
          2/17
        </p>
        <p
          className="sc-gKclnd kAkzlB"
        >
          THU
        </p>
      </div>
    </div>
    <div
      className="sc-iqseJM jlfgHR"
    >
      <div
        className="sc-pVTFL gwDOnY"
      >
        <p
          className="sc-jrQzAO bzluKI"
        >
          5
        </p>
        <div
          className="sc-furwcr iZQuQD"
        />
        <div
          className="sc-furwcr iZQuQD"
        />
        <div
          className="sc-furwcr iZQuQD"
        />
        <div
          className="sc-furwcr iZQuQD"
        />
        <div
          className="sc-furwcr iZQuQD"
        />
      </div>
      <div
        className="sc-kDTinF"
      >
        <p
          className="sc-gKclnd kAkzlB"
        >
          2/18
        </p>
        <p
          className="sc-gKclnd kAkzlB"
        >
          FRI
        </p>
      </div>
    </div>
    <div
      className="sc-iqseJM jlfgHR"
    >
      <div
        className="sc-pVTFL gwDOnY"
      >
        <p
          className="sc-jrQzAO bzluKI"
        >
          6
        </p>
        <div
          className="sc-furwcr iZQuQD"
        />
        <div
          className="sc-furwcr iZQuQD"
        />
        <div
          className="sc-furwcr iZQuQD"
        />
        <div
          className="sc-furwcr iZQuQD"
        />
        <div
          className="sc-furwcr iZQuQD"
        />
        <div
          className="sc-furwcr iZQuQD"
        />
      </div>
      <div
        className="sc-kDTinF"
      >
        <p
          className="sc-gKclnd kAkzlB"
        >
          2/19
        </p>
        <p
          className="sc-gKclnd kAkzlB"
        >
          SAT
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Label Default 1`] = `
<label
  className="sc-egiyK jtTmTn"
>
  TEST
</label>
`;

exports[`Storyshots Panel Ringtone 1`] = `
<div
  className="sc-fFeiMQ iVwcrJ"
>
  <div
    className="sc-ksdxgE eXzGbN"
  >
    <button
      className="sc-bqiRlB hLiIXR"
      onClick={[Function]}
    >
      WORK
    </button>
    <button
      className="sc-bqiRlB iiDRiq"
      onClick={[Function]}
    >
      BREAK
    </button>
  </div>
  <ul
    className="sc-fotOHu kEqiTQ"
  >
    <li
      className="sc-hBUSln rmFBK"
    >
      <div
        className="sc-dJjYzT lnZgzo"
      >
        <div
          className="sc-hGPBjI gEDQwj"
          onClick={[Function]}
        >
          <div
            className="sc-fKVqWL eIArge"
          >
            <div
              className="sc-bkkeKt dMAlZN"
            />
          </div>
          <p
            className="sc-dlVxhl jPvpsr"
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            test1
          </p>
        </div>
        <div
          className="sc-kfPuZi fKzSUh"
        >
          <button
            className="sc-bdvvtL fZQeXN"
            onClick={[Function]}
          />
          <audio
            autoPlay={false}
            src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
          />
        </div>
      </div>
    </li>
    <li
      className="sc-hBUSln rmFBK"
    >
      <div
        className="sc-dJjYzT lnZgzo"
      >
        <div
          className="sc-hGPBjI gEDQwj"
          onClick={[Function]}
        >
          <div
            className="sc-fKVqWL eIArge"
          >
            <div
              className="sc-bkkeKt dMAlZN"
            />
          </div>
          <p
            className="sc-dlVxhl jPvpsr"
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            test2
          </p>
        </div>
        <div
          className="sc-kfPuZi fKzSUh"
        >
          <button
            className="sc-bdvvtL fZQeXN"
            onClick={[Function]}
          />
          <audio
            autoPlay={false}
            src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3"
          />
        </div>
      </div>
    </li>
    <li
      className="sc-hBUSln rmFBK"
    >
      <div
        className="sc-dJjYzT lnZgzo"
      >
        <div
          className="sc-hGPBjI gEDQwj"
          onClick={[Function]}
        >
          <div
            className="sc-fKVqWL eIArge"
          >
            <div
              className="sc-bkkeKt dMAlZN"
            />
          </div>
          <p
            className="sc-dlVxhl jPvpsr"
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            test3
          </p>
        </div>
        <div
          className="sc-kfPuZi fKzSUh"
        >
          <button
            className="sc-bdvvtL fZQeXN"
            onClick={[Function]}
          />
          <audio
            autoPlay={false}
            src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-3.mp3"
          />
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Panel Task 1`] = `
<div
  className="sc-fFeiMQ iVwcrJ"
>
  <div
    className="sc-ksdxgE eXzGbN"
  >
    <button
      className="sc-bqiRlB hLiIXR"
      onClick={[Function]}
    >
      TO DO
    </button>
    <button
      className="sc-bqiRlB iiDRiq"
      onClick={[Function]}
    >
      DONE
    </button>
  </div>
  <ul
    className="sc-fotOHu kEqiTQ"
  >
    <li
      className="sc-hBUSln rmFBK"
    >
      <div
        className="sc-bYoBSM cdoDvO"
      >
        <div
          className="sc-dJjYzT lnZgzo"
        >
          <div
            className="sc-hGPBjI gEDQwj"
          >
            <div>
              <p
                className="sc-dlVxhl jPvpsr"
              >
                todo 1
              </p>
              <div
                className="sc-ieecCq bdiIAA"
              >
                <div
                  className="sc-bkkeKt dMAlZN"
                />
                <div
                  className="sc-bkkeKt dMAlZN"
                />
                <div
                  className="sc-bkkeKt dMAlZN"
                />
                <div
                  className="sc-bkkeKt dMAlZN"
                />
                <div
                  className="sc-bkkeKt dMAlZN"
                />
              </div>
            </div>
          </div>
          <div
            className="sc-kfPuZi fKzSUh"
          >
            <button
              className="sc-bBHxTw sc-cxpSdN MxLvP jUDDxQ"
              onClick={[Function]}
            >
              ...
            </button>
          </div>
        </div>
      </div>
    </li>
    <li
      className="sc-hBUSln rmFBK"
    >
      <div
        className="sc-bYoBSM cdoDvO"
      >
        <div
          className="sc-dJjYzT lnZgzo"
        >
          <div
            className="sc-hGPBjI gEDQwj"
          >
            <div>
              <p
                className="sc-dlVxhl jPvpsr"
              >
                todo 2
              </p>
              <div
                className="sc-ieecCq bdiIAA"
              >
                <div
                  className="sc-bkkeKt dMAlZN"
                />
                <div
                  className="sc-bkkeKt dMAlZN"
                />
                <div
                  className="sc-bkkeKt dMAlZN"
                />
                <div
                  className="sc-bkkeKt dMAlZN"
                />
                <div
                  className="sc-bkkeKt dMAlZN"
                />
              </div>
            </div>
          </div>
          <div
            className="sc-kfPuZi fKzSUh"
          >
            <button
              className="sc-bBHxTw sc-cxpSdN MxLvP jUDDxQ"
              onClick={[Function]}
            >
              ...
            </button>
          </div>
        </div>
      </div>
    </li>
    <li
      className="sc-hBUSln rmFBK"
    >
      <div
        className="sc-bYoBSM cdoDvO"
      >
        <div
          className="sc-dJjYzT lnZgzo"
        >
          <div
            className="sc-hGPBjI gEDQwj"
          >
            <div>
              <p
                className="sc-dlVxhl jPvpsr"
              >
                todo 3
              </p>
              <div
                className="sc-ieecCq bdiIAA"
              >
                <div
                  className="sc-bkkeKt dMAlZN"
                />
                <div
                  className="sc-bkkeKt dMAlZN"
                />
                <div
                  className="sc-bkkeKt dMAlZN"
                />
                <div
                  className="sc-bkkeKt dMAlZN"
                />
                <div
                  className="sc-bkkeKt dMAlZN"
                />
              </div>
            </div>
          </div>
          <div
            className="sc-kfPuZi fKzSUh"
          >
            <button
              className="sc-bBHxTw sc-cxpSdN MxLvP jUDDxQ"
              onClick={[Function]}
            >
              ...
            </button>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots PanelItem Default 1`] = `
<li
  className="sc-hBUSln rmFBK"
>
  <h3>
    Hello World
  </h3>
</li>
`;

exports[`Storyshots PanelList Default 1`] = `
<ul
  className="sc-fotOHu kEqiTQ"
>
  <li
    className="sc-hBUSln rmFBK"
  >
    1
  </li>
  <li
    className="sc-hBUSln rmFBK"
  >
    2
  </li>
  <li
    className="sc-hBUSln rmFBK"
  >
    3
  </li>
</ul>
`;

exports[`Storyshots Pie Children 1`] = `
<div
  className="sc-kLwhqv entxDI"
  color="#ea5548"
>
  <div
    className="sc-ikJyIC gJzmJF"
    color="#ea5548"
  />
  <div
    className="sc-jJoQJp cfQDhx"
  >
    <p
      style={
        Object {
          "margin": "0",
        }
      }
    >
      children
    </p>
  </div>
</div>
`;

exports[`Storyshots Pie Default 1`] = `
<div
  className="sc-kLwhqv entxDI"
  color="#ea5548"
>
  <div
    className="sc-ikJyIC jHNUzx"
    color="#ea5548"
  />
  <div
    className="sc-jJoQJp cfQDhx"
  />
</div>
`;

exports[`Storyshots Record Completed 1`] = `
<div
  className="sc-bkkeKt bYaGkw"
/>
`;

exports[`Storyshots Record Default 1`] = `
<div
  className="sc-bkkeKt dMAlZN"
/>
`;

exports[`Storyshots RecordGroup Default 1`] = `
<div
  className="sc-ieecCq bdiIAA"
>
  <div
    className="sc-bkkeKt dMAlZN"
  />
  <div
    className="sc-bkkeKt dMAlZN"
  />
  <div
    className="sc-bkkeKt dMAlZN"
  />
  <div
    className="sc-bkkeKt dMAlZN"
  />
  <div
    className="sc-bkkeKt dMAlZN"
  />
</div>
`;

exports[`Storyshots RingtoneItem Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
>
  <div
    className="sc-dJjYzT lnZgzo"
  >
    <div
      className="sc-hGPBjI gEDQwj"
      onClick={[Function]}
    >
      <div
        className="sc-fKVqWL eIArge"
      >
        <div
          className="sc-bkkeKt dMAlZN"
        />
      </div>
      <p
        className="sc-dlVxhl jPvpsr"
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        test
      </p>
    </div>
    <div
      className="sc-kfPuZi fKzSUh"
    >
      <button
        className="sc-bdvvtL fZQeXN"
        onClick={[Function]}
      />
      <audio
        autoPlay={false}
        src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-13.mp3"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots RingtonePanelList Default 1`] = `
<ul
  className="sc-fotOHu kEqiTQ"
>
  <li
    className="sc-hBUSln rmFBK"
  >
    <div
      className="sc-dJjYzT lnZgzo"
    >
      <div
        className="sc-hGPBjI gEDQwj"
        onClick={[Function]}
      >
        <div
          className="sc-fKVqWL eIArge"
        >
          <div
            className="sc-bkkeKt dMAlZN"
          />
        </div>
        <p
          className="sc-dlVxhl jPvpsr"
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          test1
        </p>
      </div>
      <div
        className="sc-kfPuZi fKzSUh"
      >
        <button
          className="sc-bdvvtL fZQeXN"
          onClick={[Function]}
        />
        <audio
          autoPlay={false}
          src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
        />
      </div>
    </div>
  </li>
  <li
    className="sc-hBUSln rmFBK"
  >
    <div
      className="sc-dJjYzT lnZgzo"
    >
      <div
        className="sc-hGPBjI gEDQwj"
        onClick={[Function]}
      >
        <div
          className="sc-fKVqWL eIArge"
        >
          <div
            className="sc-bkkeKt dMAlZN"
          />
        </div>
        <p
          className="sc-dlVxhl jPvpsr"
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          test2
        </p>
      </div>
      <div
        className="sc-kfPuZi fKzSUh"
      >
        <button
          className="sc-bdvvtL fZQeXN"
          onClick={[Function]}
        />
        <audio
          autoPlay={false}
          src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3"
        />
      </div>
    </div>
  </li>
  <li
    className="sc-hBUSln rmFBK"
  >
    <div
      className="sc-dJjYzT lnZgzo"
    >
      <div
        className="sc-hGPBjI gEDQwj"
        onClick={[Function]}
      >
        <div
          className="sc-fKVqWL eIArge"
        >
          <div
            className="sc-bkkeKt dMAlZN"
          />
        </div>
        <p
          className="sc-dlVxhl jPvpsr"
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          test3
        </p>
      </div>
      <div
        className="sc-kfPuZi fKzSUh"
      >
        <button
          className="sc-bdvvtL fZQeXN"
          onClick={[Function]}
        />
        <audio
          autoPlay={false}
          src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-3.mp3"
        />
      </div>
    </div>
  </li>
</ul>
`;

exports[`Storyshots Tab Active 1`] = `
<button
  className="sc-bqiRlB hLiIXR"
  onClick={[Function]}
>
  TEST
</button>
`;

exports[`Storyshots Tab Default 1`] = `
<button
  className="sc-bqiRlB iiDRiq"
  onClick={[Function]}
>
  
</button>
`;

exports[`Storyshots Tab Wording 1`] = `
<button
  className="sc-bqiRlB iiDRiq"
  onClick={[Function]}
>
  TEST
</button>
`;

exports[`Storyshots TaskItem Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-bYoBSM cdoDvO"
  >
    <div
      className="sc-dJjYzT lnZgzo"
    >
      <div
        className="sc-hGPBjI gEDQwj"
      >
        <div>
          <p
            className="sc-dlVxhl jPvpsr"
          >
            test
          </p>
          <div
            className="sc-ieecCq bdiIAA"
          >
            <div
              className="sc-bkkeKt dMAlZN"
            />
            <div
              className="sc-bkkeKt dMAlZN"
            />
            <div
              className="sc-bkkeKt dMAlZN"
            />
            <div
              className="sc-bkkeKt dMAlZN"
            />
            <div
              className="sc-bkkeKt dMAlZN"
            />
          </div>
        </div>
      </div>
      <div
        className="sc-kfPuZi fKzSUh"
      >
        <button
          className="sc-bBHxTw sc-cxpSdN MxLvP jUDDxQ"
          onClick={[Function]}
        >
          ...
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskItem Done 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-bYoBSM cdoDvO"
  >
    <div
      className="sc-dJjYzT lnZgzo"
    >
      <div
        className="sc-hGPBjI gEDQwj"
      >
        <div
          className="sc-fKVqWL eIArge"
        >
          <img
            alt=""
            src="complete.svg"
          />
        </div>
        <div>
          <p
            className="sc-dlVxhl jPvpsr"
          >
            test
          </p>
          <div
            className="sc-ieecCq bdiIAA"
          >
            <div
              className="sc-bkkeKt dMAlZN"
            />
            <div
              className="sc-bkkeKt dMAlZN"
            />
            <div
              className="sc-bkkeKt dMAlZN"
            />
            <div
              className="sc-bkkeKt dMAlZN"
            />
            <div
              className="sc-bkkeKt dMAlZN"
            />
          </div>
        </div>
      </div>
      <div
        className="sc-kfPuZi fKzSUh"
      >
        <button
          className="sc-bBHxTw sc-cxpSdN MxLvP jUDDxQ"
          onClick={[Function]}
        >
          ...
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskItem Opened 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-bYoBSM cdoDvO"
  >
    <div
      className="sc-dJjYzT lnZgzo"
    >
      <div
        className="sc-hGPBjI gEDQwj"
      >
        <div>
          <p
            className="sc-dlVxhl jPvpsr"
          >
            test
          </p>
          <div
            className="sc-ieecCq bdiIAA"
          >
            <div
              className="sc-bkkeKt dMAlZN"
            />
            <div
              className="sc-bkkeKt dMAlZN"
            />
            <div
              className="sc-bkkeKt dMAlZN"
            />
            <div
              className="sc-bkkeKt dMAlZN"
            />
            <div
              className="sc-bkkeKt dMAlZN"
            />
          </div>
        </div>
      </div>
      <div
        className="sc-kfPuZi fKzSUh"
      >
        <button
          className="sc-bBHxTw sc-cxpSdN MxLvP gTRngx"
          onClick={[Function]}
        >
          ...
        </button>
      </div>
    </div>
    <hr />
    <div
      className="sc-ezbkAF hYkXBF"
    >
      <div>
        <label
          className="sc-egiyK jtTmTn"
        >
          TASK TITLE
        </label>
        <input
          className="sc-llYSUQ eeyNUj"
          onChange={[Function]}
          type="text"
          value="test"
        />
      </div>
      <div>
        <label
          className="sc-egiyK jtTmTn"
        >
          ESTIMATED TOMATO
        </label>
        <div
          className="sc-giYglK jeobSK"
          onClick={[Function]}
        >
          <button
            className="sc-iJKOTD IlfgO"
            data-number={1}
          />
          <button
            className="sc-iJKOTD IlfgO"
            data-number={2}
          />
          <button
            className="sc-iJKOTD IlfgO"
            data-number={3}
          />
          <button
            className="sc-iJKOTD IlfgO"
            data-number={4}
          />
          <button
            className="sc-iJKOTD IlfgO"
            data-number={5}
          />
          <button
            className="sc-iJKOTD IlfgO"
            data-number={6}
          />
          <button
            className="sc-iJKOTD IlfgO"
            data-number={7}
          />
          <button
            className="sc-iJKOTD IlfgO"
            data-number={8}
          />
          <button
            className="sc-iJKOTD IlfgO"
            data-number={9}
          />
          <button
            className="sc-iJKOTD IlfgO"
            data-number={10}
          />
        </div>
      </div>
      <div
        className="sc-hKwDye faWgkr"
      >
        <button
          className="sc-dkPtRN bvmbqx"
          data-large={false}
          onClick={[Function]}
        >
          DELETE
        </button>
        <button
          className="sc-dkPtRN doeNQV"
          data-large={true}
          onClick={[Function]}
        >
          SAVE
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskItemOperate/DoneTask Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-ezbkAF hYkXBF"
  >
    <div
      className="sc-hKwDye faWgkr"
    >
      <button
        className="sc-dkPtRN bvmbqx"
        data-large={false}
        onClick={[Function]}
      >
        DELETE
      </button>
      <button
        className="sc-dkPtRN doeNQV"
        data-large={true}
        onClick={[Function]}
      >
        REDO
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskItemOperate/TodoTask Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-ezbkAF hYkXBF"
  >
    <div>
      <label
        className="sc-egiyK jtTmTn"
      >
        TASK TITLE
      </label>
      <input
        className="sc-llYSUQ eeyNUj"
        onChange={[Function]}
        type="text"
        value="test"
      />
    </div>
    <div>
      <label
        className="sc-egiyK jtTmTn"
      >
        ESTIMATED TOMATO
      </label>
      <div
        className="sc-giYglK jeobSK"
        onClick={[Function]}
      >
        <button
          className="sc-iJKOTD IlfgO"
          data-number={1}
        />
        <button
          className="sc-iJKOTD IlfgO"
          data-number={2}
        />
        <button
          className="sc-iJKOTD IlfgO"
          data-number={3}
        />
        <button
          className="sc-iJKOTD IlfgO"
          data-number={4}
        />
        <button
          className="sc-iJKOTD IlfgO"
          data-number={5}
        />
        <button
          className="sc-iJKOTD IlfgO"
          data-number={6}
        />
        <button
          className="sc-iJKOTD IlfgO"
          data-number={7}
        />
        <button
          className="sc-iJKOTD IlfgO"
          data-number={8}
        />
        <button
          className="sc-iJKOTD IlfgO"
          data-number={9}
        />
        <button
          className="sc-iJKOTD IlfgO"
          data-number={10}
        />
      </div>
    </div>
    <div
      className="sc-hKwDye faWgkr"
    >
      <button
        className="sc-dkPtRN bvmbqx"
        data-large={false}
        onClick={[Function]}
      >
        DELETE
      </button>
      <button
        className="sc-dkPtRN doeNQV"
        data-large={true}
        onClick={[Function]}
      >
        SAVE
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskItemTitle Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
>
  <div
    className="sc-dJjYzT lnZgzo"
  >
    <div
      className="sc-hGPBjI gEDQwj"
    >
      <div>
        <p
          className="sc-dlVxhl jPvpsr"
        >
          test
        </p>
        <div
          className="sc-ieecCq bdiIAA"
        >
          <div
            className="sc-bkkeKt dMAlZN"
          />
          <div
            className="sc-bkkeKt dMAlZN"
          />
          <div
            className="sc-bkkeKt dMAlZN"
          />
          <div
            className="sc-bkkeKt dMAlZN"
          />
          <div
            className="sc-bkkeKt dMAlZN"
          />
        </div>
      </div>
    </div>
    <div
      className="sc-kfPuZi fKzSUh"
    >
      <button
        className="sc-bBHxTw sc-cxpSdN MxLvP jUDDxQ"
        onClick={[Function]}
      >
        ...
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskItemTitle Done 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
>
  <div
    className="sc-dJjYzT lnZgzo"
  >
    <div
      className="sc-hGPBjI gEDQwj"
    >
      <div
        className="sc-fKVqWL eIArge"
      >
        <img
          alt=""
          src="complete.svg"
        />
      </div>
      <div>
        <p
          className="sc-dlVxhl jPvpsr"
        >
          test
        </p>
        <div
          className="sc-ieecCq bdiIAA"
        >
          <div
            className="sc-bkkeKt dMAlZN"
          />
          <div
            className="sc-bkkeKt dMAlZN"
          />
          <div
            className="sc-bkkeKt dMAlZN"
          />
          <div
            className="sc-bkkeKt dMAlZN"
          />
          <div
            className="sc-bkkeKt dMAlZN"
          />
        </div>
      </div>
    </div>
    <div
      className="sc-kfPuZi fKzSUh"
    >
      <button
        className="sc-bBHxTw sc-cxpSdN MxLvP jUDDxQ"
        onClick={[Function]}
      >
        ...
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskPanelList Default 1`] = `
<ul
  className="sc-fotOHu kEqiTQ"
>
  <li
    className="sc-hBUSln rmFBK"
  >
    <div
      className="sc-bYoBSM cdoDvO"
    >
      <div
        className="sc-dJjYzT lnZgzo"
      >
        <div
          className="sc-hGPBjI gEDQwj"
        >
          <div>
            <p
              className="sc-dlVxhl jPvpsr"
            >
              test1
            </p>
            <div
              className="sc-ieecCq bdiIAA"
            >
              <div
                className="sc-bkkeKt bYaGkw"
              />
              <div
                className="sc-bkkeKt bYaGkw"
              />
              <div
                className="sc-bkkeKt dMAlZN"
              />
              <div
                className="sc-bkkeKt dMAlZN"
              />
              <div
                className="sc-bkkeKt dMAlZN"
              />
            </div>
          </div>
        </div>
        <div
          className="sc-kfPuZi fKzSUh"
        >
          <button
            className="sc-bBHxTw sc-cxpSdN MxLvP jUDDxQ"
            onClick={[Function]}
          >
            ...
          </button>
        </div>
      </div>
    </div>
  </li>
  <li
    className="sc-hBUSln rmFBK"
  >
    <div
      className="sc-bYoBSM cdoDvO"
    >
      <div
        className="sc-dJjYzT lnZgzo"
      >
        <div
          className="sc-hGPBjI gEDQwj"
        >
          <div>
            <p
              className="sc-dlVxhl jPvpsr"
            >
              test2
            </p>
            <div
              className="sc-ieecCq bdiIAA"
            >
              <div
                className="sc-bkkeKt dMAlZN"
              />
              <div
                className="sc-bkkeKt dMAlZN"
              />
              <div
                className="sc-bkkeKt dMAlZN"
              />
              <div
                className="sc-bkkeKt dMAlZN"
              />
              <div
                className="sc-bkkeKt dMAlZN"
              />
              <div
                className="sc-bkkeKt dMAlZN"
              />
            </div>
          </div>
        </div>
        <div
          className="sc-kfPuZi fKzSUh"
        >
          <button
            className="sc-bBHxTw sc-cxpSdN MxLvP jUDDxQ"
            onClick={[Function]}
          >
            ...
          </button>
        </div>
      </div>
    </div>
  </li>
  <li
    className="sc-hBUSln rmFBK"
  >
    <div
      className="sc-bYoBSM cdoDvO"
    >
      <div
        className="sc-dJjYzT lnZgzo"
      >
        <div
          className="sc-hGPBjI gEDQwj"
        >
          <div>
            <p
              className="sc-dlVxhl jPvpsr"
            >
              test3
            </p>
            <div
              className="sc-ieecCq bdiIAA"
            >
              <div
                className="sc-bkkeKt dMAlZN"
              />
              <div
                className="sc-bkkeKt dMAlZN"
              />
              <div
                className="sc-bkkeKt dMAlZN"
              />
            </div>
          </div>
        </div>
        <div
          className="sc-kfPuZi fKzSUh"
        >
          <button
            className="sc-bBHxTw sc-cxpSdN MxLvP jUDDxQ"
            onClick={[Function]}
          >
            ...
          </button>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`Storyshots TextInput Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <input
    className="sc-llYSUQ eeyNUj"
    onChange={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`Storyshots TextInput Password 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <input
    className="sc-llYSUQ eeyNUj"
    onChange={[Function]}
    type="password"
    value=""
  />
</div>
`;

exports[`Storyshots Timer Default 1`] = `
<div
  className="sc-hiCibw"
>
  00:00
</div>
`;

exports[`Storyshots TimerPie Default 1`] = `
<div
  className="sc-kLwhqv entxDI"
  color="#ea5548"
>
  <div
    className="sc-ikJyIC eEdrGT"
    color="#ea5548"
  />
  <div
    className="sc-jJoQJp cfQDhx"
  >
    <div
      className="sc-gWXbKe jfwFLr"
    >
      <div
        className="sc-hiCibw"
      >
        00:50
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Title Default 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="sc-cCcXHH bPWxFO"
  >
    <h1
      className="sc-cidDSM rVYgf"
    >
      TEST
    </h1>
    <hr />
  </div>
</div>
`;

exports[`Storyshots ToggleButton Default 1`] = `
<button
  className="sc-bBHxTw sc-cxpSdN MxLvP jUDDxQ"
  onClick={[Function]}
>
  ...
</button>
`;

exports[`Storyshots ToggleButton Primary 1`] = `
<div
  className="sc-gsDKAQ kOwJXi"
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <button
    className="sc-bBHxTw sc-iwjdpV MxLvP csuOVF"
    onClick={[Function]}
  >
    <img
      alt=""
      data-image="tomato"
      src="tomato_small_color.svg"
    />
    <img
      alt=""
      data-image="arrow"
      src="arrow.svg"
    />
  </button>
</div>
`;

exports[`Storyshots TomatoButton Active 1`] = `
<button
  className="sc-iJKOTD cMedTm"
/>
`;

exports[`Storyshots TomatoButton Default 1`] = `
<button
  className="sc-iJKOTD IlfgO"
/>
`;

exports[`Storyshots TomatoButtonGroup Default 1`] = `
<div
  className="sc-giYglK jeobSK"
  onClick={[Function]}
>
  <button
    className="sc-iJKOTD IlfgO"
    data-number={1}
  />
  <button
    className="sc-iJKOTD IlfgO"
    data-number={2}
  />
  <button
    className="sc-iJKOTD IlfgO"
    data-number={3}
  />
  <button
    className="sc-iJKOTD IlfgO"
    data-number={4}
  />
  <button
    className="sc-iJKOTD IlfgO"
    data-number={5}
  />
  <button
    className="sc-iJKOTD IlfgO"
    data-number={6}
  />
  <button
    className="sc-iJKOTD IlfgO"
    data-number={7}
  />
  <button
    className="sc-iJKOTD IlfgO"
    data-number={8}
  />
  <button
    className="sc-iJKOTD IlfgO"
    data-number={9}
  />
  <button
    className="sc-iJKOTD IlfgO"
    data-number={10}
  />
</div>
`;

exports[`Storyshots TomatoButtonGroup Default Selected Number 1`] = `
<div
  className="sc-giYglK jeobSK"
  onClick={[Function]}
>
  <button
    className="sc-iJKOTD cMedTm"
    data-number={1}
  />
  <button
    className="sc-iJKOTD cMedTm"
    data-number={2}
  />
  <button
    className="sc-iJKOTD cMedTm"
    data-number={3}
  />
  <button
    className="sc-iJKOTD IlfgO"
    data-number={4}
  />
  <button
    className="sc-iJKOTD IlfgO"
    data-number={5}
  />
  <button
    className="sc-iJKOTD IlfgO"
    data-number={6}
  />
  <button
    className="sc-iJKOTD IlfgO"
    data-number={7}
  />
  <button
    className="sc-iJKOTD IlfgO"
    data-number={8}
  />
  <button
    className="sc-iJKOTD IlfgO"
    data-number={9}
  />
  <button
    className="sc-iJKOTD IlfgO"
    data-number={10}
  />
</div>
`;
